--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Crosslight.Xamarin.Android.Support.v4" version="23.1.1" targetFramework="monoandroid70" />
+  <package id="Crosslight.Xamarin.Android.Support.v7.AppCompat" version="23.1.1" targetFramework="monoandroid70" />
   <package id="MvvmCross" version="4.2.3" targetFramework="monoandroid60" />
   <package id="MvvmCross.Binding" version="4.2.3" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.2.3" targetFramework="monoandroid60" />
