--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -37,11 +37,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
-    <Compile Include="Database\UserTable.cs" />
+    <Compile Include="Database\Database.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
     <Compile Include="Interfaces\IAzureDatabase.cs" />
     <Compile Include="Interfaces\ISqlite.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\DatabaseTables.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\FirstViewModel.cs" />
   </ItemGroup>
