--- a/YWWACP_Core/YWWACP.Core/packages.config
+++ b/YWWACP_Core/YWWACP.Core/packages.config
@@ -12,4 +12,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
