--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -14,4 +14,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="monoandroid60" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="monoandroid60" />
 </packages>
