--- a/vikingDatabase/vikinganonymousService/packages.config
+++ b/vikingDatabase/vikinganonymousService/packages.config
@@ -26,6 +26,9 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SQLite.Net-PCL" version="3.0.5" targetFramework="net45" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net45" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
 </packages>
