--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -9,6 +9,7 @@
   <package id="MvvmCross" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Binding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.FullFragging" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Shared" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V4" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V7.AppCompat" version="4.3.0" targetFramework="monoandroid60" />
