--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ViewModels\ComunityViewModel.cs" />
     <Compile Include="ViewModels\CreateNewThreadViewModel.cs" />
     <Compile Include="ViewModels\FirstViewModel.cs" />
+    <Compile Include="ViewModels\ParentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
