--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -136,6 +136,7 @@
   <ItemGroup>
     <Compile Include="ChartMainPageActivity.cs" />
     <Compile Include="NewExerciseDialog.cs" />
+    <Compile Include="Views\CommentsView.cs" />
     <Compile Include="Views\CommunityActivity.cs" />
     <Compile Include="Database\AzureDatabase.cs" />
     <Compile Include="DebugTrace.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Database\SQLiteDroid.cs" />
     <Compile Include="Views\FirstView.cs" />
+    <Compile Include="Views\WriteCommentView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -210,6 +212,15 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\ChartMainPage.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Comments.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\CommentsListViewRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\WriteComment.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
