--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -41,12 +41,15 @@
     <Compile Include="Interfaces\IAzureDatabase.cs" />
     <Compile Include="Interfaces\IDatabase.cs" />
     <Compile Include="Interfaces\ISqlite.cs" />
+    <Compile Include="Models\Comments.cs" />
     <Compile Include="Models\DatabaseTables.cs" />
     <Compile Include="Models\NewDiscussionThread.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CommentsViewModel.cs" />
     <Compile Include="ViewModels\ComunityViewModel.cs" />
     <Compile Include="ViewModels\CreateNewThreadViewModel.cs" />
     <Compile Include="ViewModels\FirstViewModel.cs" />
+    <Compile Include="ViewModels\WriteCommentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
