--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -153,6 +153,7 @@
     <Compile Include="NewDiscussionThread.cs" />
     <Compile Include="NewHealthPlanActivity.cs" />
     <Compile Include="Views\EditProfileView.cs" />
+    <Compile Include="Views\MyThreadsView.cs" />
     <Compile Include="Views\ProfileActivity.cs" />
     <Compile Include="RecipesActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -227,6 +228,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\EditProfile.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\MyThreads.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
