--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Crosslight.Xamarin.Android.Support.v4" version="23.1.1" targetFramework="monoandroid70" />
   <package id="Crosslight.Xamarin.Android.Support.v7.AppCompat" version="23.1.1" targetFramework="monoandroid70" />
-  <package id="Microsoft.Azure.Mobile.Client" version="3.0.1" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Client" version="3.0.2" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.0.2" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
@@ -16,4 +17,8 @@
   <package id="OxyPlot.Xamarin.Android" version="1.0.0-unstable1983" targetFramework="monoandroid70" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.core" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
 </packages>
